--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,8 +1,34 @@
 <resources>
+
+    <string name="label_settings">Settings</string>
+    <string name="label_main">SpotTok Main</string>
+    <string name="label_detail">Song Details</string>
+    <string name="label_liked_songs">Liked Songs</string>
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
     <string name="app_name">GitHub Search with Navigation</string>
 
     <string name="search_hint">Search GitHub…</string>
     <string name="search">Search</string>
+
 
     <string name="search_error">Error fetching search results: %1$s</string>
 
