--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -5,7 +5,7 @@
     <string name="label_detail">Song Details</string>
     <string name="label_liked_songs">Liked Songs</string>
 
-    <string name="app_name">Spotok</string>
+    <string name="app_name">SpotTok</string>
 
     <string name="search_error">Error fetching search results: %1$s</string>
 
