Bug fixes, incorrect references

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -9,6 +9,9 @@
 
     <string name="search_error">Error fetching search results: %1$s</string>
 
+    <string name="search">Search</string>
+    <string name="search_hint">Search in SpotTok</string>
+
     <string name="action_share">Share</string>
     <string name="share_text">%1$s on GitHub: %2$s</string>
 
