updated layout constraints to be appropriate, added resources to layouts

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -16,6 +16,8 @@
     <string name="skip_prev">Previous</string>
     <string name="like_song">Like</string>
 
+    <string name="action_play">Play</string>
+
     <string name="action_share">Share</string>
     <string name="share_text">%1$s on GitHub: %2$s</string>
 
